# fpt-max-cut

./: .gitignore  .gitmodules  CMakeLists.txt  JSONParser.cmake  LICENSE  README.md  build-config.json  build.sh  run-example.sh
data/example-graphs/: example.edges
data/output/experiments/: cmp-to-linear.r  cmp-to-linear.sh  rsync-from-remote.sh
data/output/experiments/kernelization/: plotting.r  plotting.sh
data/output/experiments/kernelization/small/: plotting.r
data/output/experiments/linear-kernel/: plotting.r  plotting.sh
data/output/experiments/remote-history/: combine-solvers.sh
data/output/experiments/solvers/: analyze.r  plotting.r  plotting.sh
data/output/kernelization/: ba_1024  ba_1024-avg  gnm_undirected_1024  gnm_undirected_1024-avg  gnm_undirected_128  gnm_undirected_128-avg  plotting-compare.r  plotting-immense.r  plotting.r  rdg_2d_1024  rdg_2d_1024-avg  rdg_3d_1024  rdg_3d_1024-avg  rhg_1024_g2.4  rhg_1024_g2.4-avg  rhg_1024_g5.4  rhg_1024_g5.4-avg  rhg_128_g2.1  rhg_128_g2.1-avg  rhg_instance1
data/output/kernelization-applicability-count/: README.md  kernelization-applicability-count
data/output/kernelization-applicability-count-plotting/: gnm_undirected  plotting.r
data/output/localsolver-lower-bound-cut-size/: README.md  cut-size-lowerb-with-oneway_2.0
docs/: notes
example-graphs/: example  example.graph
executables/: benchmark.cpp  double-clique-solver.cpp  find-kernelization-general.cpp  find-kernelization-grid.cpp  find-kernelization-weighted.cpp  lower-bound-num-of-class-computation.cpp  playground.cpp  random-playground.cpp  remove-double-edges.cpp  test-articulation-and-biconnected.cpp  test-articulation-points.cpp  test-graph-functionality.cpp  test-kernelization-all.cpp  test-kernelization-auto.cpp
executables/utils/: unweight-an-instance.cpp
ext-localsolver/: makefile  maxcut.cpp
output/: R-kagen-cmp-isolated.r  R-kagen-cmp-standard-to-linear_fpt.r  R-kagen-cmp-standard_A-to-standard_B.r  R-kagen-linear_fpt.r  R-kagen-standard.r  R-solvers-over-time.r  R-very-small.r  build-cpp.sh  cpp-latex_table-create-isolated.cpp  cpp-latex_table-create_solvers.cpp  cpp-latex_table-marked.cpp  cpp-latex_table-utils.hpp  generate-all.sh  generate-bootstrap.sh  generate-solvers-plots.sh  generate-stats-cmp-isolated.sh  generate-stats-cmp-plots.sh  generate-stats-linear_fpt-plots.sh  generate-stats-standard-plots.sh  generate-very-small.sh
output/previous/: combine-solvers.sh  rsync-from-remote.sh
scripts/: create-clique-edge-list.js  generate-output-debug-test.sh  generate-output-debug.sh  generate-output-plots-only.sh  generate-output.sh  generate-tests.sh  recreate-investigation-sampling.sh  recreate-investigation.sh  test-all.sh
scripts/experiments/: README.md  all-plots-regenerate.sh  all.sh  benchmark-small.sh  biqmac.sh  bootstrap-vars.sh  bootstrap.sh  kernelization-biqmac-gen.sh  kernelization-biqmac-solver.sh  kernelization-biqmac.sh  kernelization-gen.sh  kernelization-kagen-20-n512-2048-sparse.sh  kernelization-kagen-n100k-500k-sparse.sh  kernelization-kagen-n512-2048-sparse.sh  kernelization-kagen-rhg-n512-2048-sparse.sh  kernelization-kagen-rhg.sh  kernelization-kagen.sh  linear-kernel-biqmac.sh  linear-kernel-kagen-20-n512-2048-sparse.sh  linear-kernel-kagen-n512-2048-sparse.sh  linear-kernel-kagen.sh  solvers-mqlib-live.sh  solvers-mqlib.sh  solvers-onlyk.sh  solvers-realworld-mqlib-vlsi.sh  solvers-realworld-parallel.sh  solvers-realworld-small-hard.sh  solvers-realworld-small.sh  solvers-realworld.sh  static-solvers-realworld-small-unweighted.sh  static-solvers-realworld-small-weighted.sh  stats-kernelization-biqmac.sh  stats-kernelization-kagen-rhg.sh  stats-kernelization-kagen.sh  stats-linear-kernel-extended.sh  stats-linear-kernel-kagen.sh  stats-linear-kernel.sh  stats-realworld.sh  stats-small.sh  timekernelization-kagen-n100k-500k-sparse.sh
solvers/localsolver/: README  makefile  maxcut  maxcut.cpp
src/: checks.hpp  graph-database.cpp  graph-database.hpp  input-parser.hpp  maxcut-localsolver.hpp  mc-graph.cpp  mc-graph.hpp  one-way-reducers.hpp  output-filter.cpp  output-filter.hpp  two-way-reducers.hpp  utils.cpp  utils.hpp
src/benchmarks/: benchmark-applicability-count.hpp  benchmark-clique-decomposition.hpp  benchmark-count-clique-with-internal.hpp  benchmark-interface.hpp  benchmark-kernelization-applicability-count.hpp  benchmark-kernelization-by-clique.hpp  benchmark-kernelization.hpp  benchmark-linear-kernel-paper.hpp  benchmark-marked-set.hpp  benchmark-playground.hpp  solver-helper.hpp
